<resources>
    <string name="app_name">IPROChinatown</string>
    <string name="title_activity_maps">Map</string>
    <string name="change_language">Change Language</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="chicago_chinatown">Chicago\nChinatown</string>
    <string name="main_tile">The Dream of Chinatown</string>
    <string name="about_chinatown">About Chinatown</string>
    <string name="main_audio_story">Chinatown Audible Story</string>
    <string name="locations">Locations</string>
    <string name="map">   Map   </string>
    <string name="community">Community</string>
    <string name="about_us">About   US</string>
    <string name="about_chinatown_content">Chicago Chinatown was in Clark St. between Adams and Van Buren, due to the limit of Chinese immigration and the increasing of the rent, Chinese were forced to move to present day Chinatown at the intersection of Wentworth Avenue and Cermak Road in 1912. Nowadays, Chinatown has developed to be a big commercial and residential area with amazing architecture. However, this area used to be a multicultural community. At that time, the community residents included Italian, German, Swiss, African, later, it gradually formed a Chinese-dominated community. Therefore, the architectures in Chicago ChinaTown incorporated Chinese elements, but they still show differences from traditional Chinese-style buildings.</string>
    <string name="story_text">        If you think Chinatown is only a place for restaurants and delicious food, there is much more you have to learn in order to fully understand this place. Chinatown, Chicago, a small neighborhood located in between Bridgeport and South Loop, is the starting place for most of the Chinese immigrants. For most of the Chinese immigrants, Chinatown is the very beginning of their life in America. They work just as hard as people in other neighborhoods, but their desire for a better future is what others lack. In this small but marvelous community, ordinary people are creating extraordinary stories one after another.
        Many of you might have heard the story about J. K. Rowling, the author of Harry Potter, chasing her dream of becoming a writer. On the path towards her dream, she was in such a financial crisis that she could not even afford a computer, thus she had to type out every chapter of her books to send to publishers. Many publishers once rejected her books; however, because of her perseverance, she was able to find a publisher that was willing to appreciate her work and allow her to finally publish. Similar to J.K. Rowling, the main character of this story is a Chinese immigrant who is chasing his dream with his perseverance in Chicago Chinatown.
        Chinatown, Chicago is a place filled with infinite possibilities for Chinese immigrants. For example, some people are able to manage to break through the unseen gap of Chinatown and the outside world, but some have to stay in Chinatown for most of their life by working and hoping for a better life. Seven years ago, a family from China deplaned in O'hare Airport of Chicago. Same as most families, this family had three members: a hardworking father, a kind mother, and a fifth grade son. When this family first arrived in the city of Chicago, with the help of relatives, they were able to find a basement in Chinatown to be their first home. Because of the language barrier, the parents had to work in Chinese restaurants in Chinatown for long hours and low paid, and their son had to go to a neighborhood school for bilingual education. The son always had a dream since he was a child, which was to become an inventor like The Wright Brothers. Because of his engaged and playful attitude, he did not have a hard time making friends in school. Furthermore, his first bilingual teacher was very enthusiastic when helping him with school work and teaching him proper English. However, good times never last long. Two years later, the boy became a seventh grader in the same school; everything seemed to be the same, but he had to say goodbye to his favorite teacher. In his last two years of elementary school, he had a teacher who disagreed with him at everything, it did not matter whether the son was correct or not. One day, the teacher asked the class to write a paper about their dreams and the boy did write about his dream; he expressed his love for innovations and technology, even suggesting his hope to become a positive influence to the other inventors of the world. However, when the teacher read his paper, the teacher did not give a fair grade to him because the teacher disagreed with his dream. Of course, the son was not convinced that he deserved the grade he got, so he asked another teacher to read his paper. When he heard that his paper did not deserve the grade his teacher gave to him, he found himself angry at all the unfairness in society. When he was ready to give up his dream, he realized that the reason for the Chinese immigrants to persevere and work hard: they wish to achieve their dreams and strive for a better future. After his enlightenment, he began to study hard for his dream. Despite the hardships he encountered from his teacher, he never gave up. Later in the year, he was able to exceed the expectations of the teacher and attended one of top high schools in Chicago. Now, the son is ready to graduate from high school. Throughout his high school career, he never stopped working towards his dream because he understands the cruel reality of the Chinatown community: if one is willing to work hard and have perseverance for his or her dream, he or she will be able to become successful; on the other hand, if one gives up easily, he or she would be looked down by others in the neighborhood and can never escape this community.</string>
    <string name="hours">Hours:</string>
    <string name="address">Address:</string>
    <string name="contact">Contact:</string>
    <string name="about">About:</string>
</resources>